Refactor code structure for improved readability and maintainability

--- a/apps/demo/src/app/app.component.scss
+++ b/apps/demo/src/app/app.component.scss
@@ -5,4 +5,6 @@ sio-app {
   --sio-right-menu-content-color: #ffffff;
   --sio-right-menu-footer-color: #ffffff;
   --sio-right-menu-header-color: #ffffff;
+  
+  --ion-background-color: #ffffff;
 }
