--- a/libs/chat/src/lib/components/chat/chat.component.html
+++ b/libs/chat/src/lib/components/chat/chat.component.html
@@ -3,18 +3,16 @@
     refreshingSpinner="circles" refreshingText="{{ 'CHAT_PULL_WAITING' | translate }}">
   </ion-refresher-content>
 </ion-refresher>
-<ion-list fullscreen="true">
-  <ion-item-group>
-  <ion-item-divider>
-    <ion-label>15 Maggio 2025</ion-label>
-  </ion-item-divider>
-  <sio-chat-message *ngFor="
+
+
+  
+  <sio-chat-message class="message-wrapper" *ngFor="
     let item of this.sioChatState.selectAll()[0]?.messages;
     " [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)" [user]="item.from.nick"
     [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
     [received]="item.from.nick !== 'Fr4'"></sio-chat-message>
-    </ion-item-group>
-</ion-list>
+
+
 <ion-infinite-scroll *ngIf="
     this.infinite !== null &&
     this.sioChatState.localTotals !== this.sioChatState.remoteTotals
