--- a/libs/chat/src/lib/components/chat/chat.component.scss
+++ b/libs/chat/src/lib/components/chat/chat.component.scss
@@ -1,4 +1,4 @@
-:host{
+:host {
   ion-item-divider {
     //background-color: rgba(255, 255, 255, 0.0);
     color: #fff;
@@ -7,6 +7,10 @@
     text-align: center;
   }
   ion-list {
-    background-color: rgba(255, 255, 255, 0.0)
+    background-color: rgba(255, 255, 255, 0);
+  }
+
+  .message-wrapper {
+    position: relative;
   }
 }
