--- a/libs/chat/src/lib/components/message/message.component.scss
+++ b/libs/chat/src/lib/components/message/message.component.scss
@@ -1,126 +1,128 @@
 :host {
-  .avatar-top {
-    margin: 16px 16px 8px 0;
-    margin-bottom: auto;
-    border: 2px;
-    border-color: #fff;
+  img.profile-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 10px;
   }
 
-  ion-item {
-    --background: rgba(255, 255, 255, 0.0);
-    --border-color: rgba(255, 255, 255, 0.0);
+  img.profile-pic.left {
+    left: 10px;
+  }
+
+  img.profile-pic.right {
+    right: 10px;
+  }
+
+  .ion-email {
+    float: right;
+    font-size: 32px;
+    vertical-align: middle;
   }
 
   .message {
+    font-size: 14px;
+  }
+
+  .message-detail {
+    white-space: nowrap;
+    font-size: 14px;
+  }
+
+  .message-wrapper {
     position: relative;
-    padding: 7px 0;
-
-
-    .msg-detail {
-      width: 100%;
-      display: inline-block;
-
-      p {
-        margin: 0;
-      }
-
-    }
   }
 
-  .message.left {
-
-
-    .msg-detail {
-      width: 100%;
-      padding-left: 5px;
-    }
-
-    .user-img {
-      left: 0;
-    }
-
-    .msg-content {
-      background-color: #ffffff;
-      color: #343434;
-      float: left;
-      position: relative;
-      margin-top: 5px;
-      border-radius: 5px;
-      padding: 8px;
-      border: 1px solid #ddd;
-      width: auto;
-      max-width: 80%;
-
-
-      span.triangle {
-        background-color: #fff;
-        border-top-width: 0;
-        border-right-width: 0;
-        border-left-width: 1px;
-        border-bottom-width: 1px;
-        border-color: #ddd;
-        left: -5px;
-        border-radius: 2px;
-        height: 8px;
-        width: 8px;
-        top: 12px;
-        display: block;
-        border-style: solid;
-        -webkit-transform: rotate(45deg);
-        transform: rotate(45deg);
-        position: absolute;
-      }
-    }
-
+  .message-wrapper:last-child {
+    margin-bottom: 10px;
   }
 
-  .message.right {
-    .msg-detail {
-      width: 100%;
-      padding-right: 5px;
-    }
-
-  
-
-    ion-spinner {
-      position: absolute;
-      right: 10px;
-      top: 50px;
-    }
-
-    .msg-content {
-      background-color: #387ef5;
-      color: #fff;
-      float: right;
-      position: relative;
-      margin-top: 5px;
-      border-radius: 5px;
-      padding: 8px;
-      border: 1px solid #ddd;
-      width: auto;
-      max-width: 80%;
-
-      span.triangle {
-        border-radius: 2px;
-        background-color: #387ef5;
-        border-color: #ddd;
-        border-bottom-width: 0;
-        border-left-width: 0;
-        border-top-width: 1px;
-        border-right-width: 1px;
-        right: -5px;
-        height: 8px;
-        width: 8px;
-        top: 12px;
-        display: block;
-        border-style: solid;
-        -webkit-transform: rotate(45deg);
-        transform: rotate(45deg);
-        position: absolute;
-      }
-    }
-
+  .chat-bubble {
+    border-radius: 5px;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    margin: 10px;
+    max-width: 80%;
   }
 
+  .chat-bubble:before {
+    content: '\00a0';
+    display: block;
+    height: 16px;
+    width: 9px;
+    position: absolute;
+    bottom: -7.5px;
+  }
 
+  .chat-bubble.left {
+    background-color: #e6e5eb;
+    float: left;
+    margin-left: 55px;
+  }
+
+  .chat-bubble.left:before {
+    background-color: #e6e5eb;
+    left: 10px;
+    -webkit-transform: rotate(70deg) skew(5deg);
+  }
+
+  .chat-bubble.right {
+    background-color: #158ffe;
+    color: #fff;
+    float: right;
+    margin-right: 55px;
+  }
+
+  .chat-bubble.right:before {
+    background-color: #158ffe;
+    right: 10px;
+    -webkit-transform: rotate(118deg) skew(-5deg);
+  }
+
+  .chat-bubble.right a.autolinker {
+    color: #fff;
+    font-weight: bold;
+  }
+
+  .user-messages-top-icon {
+    font-size: 28px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: -3px;
+    right: 5px;
+  }
+
+  .msg-header-username {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: -3px;
+  }
+
+  .bar.item-input-inset .item-input-wrapper input {
+    width: 100% !important;
+  }
+
+  input,
+  textarea,
+  .item-input,
+  .item-input-wrapper {
+    background-color: #f4f4f4 !important;
+  }
+
+  .bold {
+    font-weight: bold;
+  }
+
+  .cf {
+    clear: both !important;
+  }
+
+  a.autolinker {
+    color: #3b88c3;
+    text-decoration: none;
+  }
 }
