refactor: clean up styles and improve chat component structure

--- a/libs/chat/src/lib/components/chat/chat.component.html
+++ b/libs/chat/src/lib/components/chat/chat.component.html
@@ -4,14 +4,10 @@
   </ion-refresher-content>
 </ion-refresher>
 
-
-  
-  <sio-chat-message class="message-wrapper" *ngFor="
-    let item of this.sioChatState.selectAll()[0]?.messages;
-    " [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)" [user]="item.from.nick"
-    [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
-    [received]="item.from.nick !== 'Fr4'"></sio-chat-message>
-
+<sio-chat-message *ngFor="let item of this.sioChatState.selectAll()[0]?.messages;" class="message-wrapper"
+  [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)" [user]="item.from.nick"
+  [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
+  [received]="item.from.nick !== 'Fr4'"></sio-chat-message>
 
 <ion-infinite-scroll *ngIf="
     this.infinite !== null &&
