--- a/apps/demo/src/global.scss
+++ b/apps/demo/src/global.scss
@@ -9,6 +9,7 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+
 /* Core CSS required for Ionic components to work properly */
 @import '@ionic/angular/css/core.css';
 
@@ -35,3 +36,4 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 // @import '@ionic/angular/css/palettes/dark.class.css';
 @import '@ionic/angular/css/palettes/dark.system.css';
+@import './theme/silicia.scss';
