--- a/libs/chat/src/lib/components/message/message.component.scss
+++ b/libs/chat/src/lib/components/message/message.component.scss
@@ -1,5 +1,23 @@
 :host {
-  img.profile-pic {
+  .bar-footer {
+    overflow: visible !important;
+  }
+
+  .bar-footer textarea {
+    resize: none;
+    height: 25px;
+  }
+
+  /* fixes an ios bug bear */
+  button.ion-android-send {
+    padding-top: 2px;
+  }
+
+  .footer-btn {
+    font-size: x-large;
+  }
+
+  ion-img.profile-pic {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -7,11 +25,11 @@
     bottom: 10px;
   }
 
-  img.profile-pic.left {
+  ion-img.profile-pic.left {
     left: 10px;
   }
 
-  img.profile-pic.right {
+  ion-img.profile-pic.right {
     right: 10px;
   }
 
@@ -28,6 +46,10 @@
   .message-detail {
     white-space: nowrap;
     font-size: 14px;
+  }
+
+  .bar.item-input-inset .item-input-wrapper input {
+    width: 100% !important;
   }
 
   .message-wrapper {
@@ -48,7 +70,7 @@
   }
 
   .chat-bubble:before {
-    content: '\00a0';
+    content: "\00a0";
     display: block;
     height: 16px;
     width: 9px;
@@ -57,26 +79,26 @@
   }
 
   .chat-bubble.left {
-    background-color: #e6e5eb;
+    background-color: var(--ion-color-secondary);
     float: left;
     margin-left: 55px;
   }
 
   .chat-bubble.left:before {
-    background-color: #e6e5eb;
+    background-color: var(--ion-color-secondary);
     left: 10px;
     -webkit-transform: rotate(70deg) skew(5deg);
   }
 
   .chat-bubble.right {
-    background-color: #158ffe;
+    background-color: var(--ion-color-primary);
     color: #fff;
     float: right;
     margin-right: 55px;
   }
 
   .chat-bubble.right:before {
-    background-color: #158ffe;
+    background-color: var(--ion-color-primary);
     right: 10px;
     -webkit-transform: rotate(118deg) skew(-5deg);
   }
@@ -102,10 +124,6 @@
     top: -3px;
   }
 
-  .bar.item-input-inset .item-input-wrapper input {
-    width: 100% !important;
-  }
-
   input,
   textarea,
   .item-input,
@@ -124,5 +142,42 @@
   a.autolinker {
     color: #3b88c3;
     text-decoration: none;
+  }
+
+  /* loading */
+  .loader-center {
+    height: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .loader .ion-loading-c {
+    font-size: 64px;
   }
 }
