--- a/libs/chat/src/lib/components/chat/chat.component.html
+++ b/libs/chat/src/lib/components/chat/chat.component.html
@@ -4,16 +4,15 @@
   </ion-refresher-content>
 </ion-refresher>
 
-<ion-item-group class="messages-item-group" *ngFor="let item of this.sioChatState.selectAll()[0]?.messages;">
-    <!-- Date message divider 
-    <sio-message-divider [isPageScrolling]="this.isPageScrolling" [createdAt]="item.$createdAt?item.$createdAt:''" />
-    -->
+<ion-item-group class="messages-item-group"
+  *ngFor="let item of this.sioChatState.selectAll()[0]?.messages;trackBy: trackBy;let index = index; let last = last">
+  <sio-message-divider [isPageScrolling]="this.isPageScrolling" [createdAt]="item.$createdAt?item.$createdAt:''" />
 
-<sio-chat-message class="message-wrapper"
-  [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)" [user]="item.from.nick"
-  [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
-  [received]="item.from.nick !== 'Fr4'"></sio-chat-message>
- </ion-item-group>
+  <sio-chat-message class="message-wrapper" [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)"
+    [user]="item.from.nick" [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
+    [received]="item.from.nick !== 'Fr4'"
+    [isLastMessage]="this.sioChatState.selectAll()[0]!.messages[index + 1]!.from.nick !== item.from.nick || false"></sio-chat-message>
+</ion-item-group>
 <ion-infinite-scroll *ngIf="
     this.infinite !== null &&
     this.sioChatState.localTotals !== this.sioChatState.remoteTotals
