--- a/libs/chat/src/lib/components/chat/chat.component.html
+++ b/libs/chat/src/lib/components/chat/chat.component.html
@@ -6,8 +6,8 @@
 
 <ion-item-group class="messages-item-group"
   *ngFor="let item of this.sioChatState.selectAll()[0]?.messages;trackBy: trackBy;let index = index; let last = last">
-  <sio-message-divider [isPageScrolling]="this.isPageScrolling" [createdAt]="item.$createdAt?item.$createdAt:''" />
-
+  <sio-message-divider *ngIf="(this._last_day && item.$createdAt)?this._last_day.split('T')[0] != item.$createdAt.split('T')[0]:true" [isPageScrolling]="this.isPageScrolling" [createdAt]="item.$createdAt?item.$createdAt:''" />
+  {{this._last_day!.split('T')[0]}} = {{item!.$createdAt!.split('T')[0]}}
   <sio-chat-message class="message-wrapper" [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)"
     [user]="item.from.nick" [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
     [received]="item.from.nick !== 'Fr4'"
