feat(chat): update API endpoints, enhance chat component, and add avatar component

--- a/apps/demo/src/global.scss
+++ b/apps/demo/src/global.scss
@@ -36,4 +36,5 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 // @import '@ionic/angular/css/palettes/dark.class.css';
 @import '@ionic/angular/css/palettes/dark.system.css';
+@import './theme/variables.scss';
 @import './theme/silicia.scss';
