--- a/apps/demo/src/theme/variables.scss
+++ b/apps/demo/src/theme/variables.scss
@@ -15,7 +15,7 @@
 
 /* This sets a different background and item background for the default theme on md */
 :root.md {
-  --ion-background-color: var(--ion-background-color-step-100, #f9f9f9);
+  --ion-background-color: #ffffff; //var(--ion-background-color-step-100, #f9f9f9);
   --ion-toolbar-background: var(--ion-background-color);
   --ion-item-background: #fff;
 }
