Add storybook.log to track installation progress and warnings
- Created a new log file for Storybook installation progress.
- Documented warnings regarding deprecated packages and migration to @storybook/test.
- Noted an error related to eslint-plugin-storybook version mismatch.

--- a/libs/chat/src/lib/pages/chat/chat.page.scss
+++ b/libs/chat/src/lib/pages/chat/chat.page.scss
@@ -8,4 +8,16 @@
     --padding-bottom: 10px;
     --padding-start: 10px;
   }
+
+  sio-page {
+    ion-header {
+      ion-toolbar {
+        ion-item {
+          sio-avatar {
+            --sio-border-radius: 10px;
+          }
+        }
+      }
+    }
+  }
 }
