--- a/libs/chat/src/lib/components/room/room.component.html
+++ b/libs/chat/src/lib/components/room/room.component.html
@@ -5,19 +5,19 @@
 </ion-refresher>
 
 <ion-item-group class="messages-item-group"
-  *ngFor="let item of this.sioChatState.selectAll()[0]?.messages;trackBy: trackBy;let index = index; let last = last, let first = first">
+  *ngFor="let item of this.sioChatMessageState.selectAll();trackBy: trackBy;let index = index; let last = last, let first = first">
   <sio-message-divider
-    *ngIf="first || (this.sioChatState.selectAll()[0]!.messages[index - 1].$createdAt!.split('T')[0] !== item.$createdAt!.split('T')[0])"
+    *ngIf="first || (this.sioChatMessageState.selectAll()[index - 1].$createdAt!.split('T')[0] !== item.$createdAt!.split('T')[0])"
     [isPageScrolling]="this.isPageScrolling" [createdAt]="item.$createdAt?item.$createdAt:''" />
   
   <sio-chat-message class="message-wrapper" [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)"
     [user]="item.from.nick" [avatar]="item.from.avatar" [date]="item.$createdAt?item.$createdAt:''" [state]="item.state"
     [received]="item.from.nick !== 'Fr4'"
-    [isLastMessage]="this.sioChatState.selectAll()[0]!.messages[index + 1]!.from.nick !== item.from.nick || false"></sio-chat-message>
+    [isLastMessage]="this.sioChatMessageState.selectAll()[index + 1]!.from.nick !== item.from.nick || false"></sio-chat-message>
 </ion-item-group>
 <ion-infinite-scroll *ngIf="
     this.infinite !== null &&
-    this.sioChatState.localTotals !== this.sioChatState.remoteTotals
+    this.sioChatMessageState.localTotals !== this.sioChatMessageState.remoteTotals
   " threshold="20%" (ionInfinite)="(null)">
   <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="{{ 'CHAT_LOADING' | translate }}">
   </ion-infinite-scroll-content>
